--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Prueba técnica infodec",
   "main": "index.js",
   "scripts": {
+    "install:frontend": "npm install --prefix frontend",
     "start:php": "cd backend && php artisan serve",
     "start:angular": "cd frontend && ng serve",
     "start": "concurrently \"npm run start:php\" \"npm run start:angular\"",
